<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/cadastro_clientes" />
	<TextView android:text="Id:" android:id="@+id/txtIdCliente" android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/txt_nome" android:id="@+id/txtNomeCliente"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<EditText android:text="" android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:singleLine="true" android:id="@+id/etxtNomeCliente"/>

	<LinearLayout android:id="@+id/llCliente1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button android:text="@string/btn_salvar" android:id="@+id/btnSalvarCliente"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
		<Button android:text="@string/btn_cancelar" android:id="@+id/btnCancelarCliente"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
	</LinearLayout>

</LinearLayout>
