<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/cadastro_canais" />
	<TextView android:text="Id:" android:id="@+id/txtIdCanal" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

	<TextView android:text="@string/txt_descricao" android:id="@+id/txtDescricaoCanal"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<EditText android:text="" android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:singleLine="true" android:id="@+id/etxtDescricaoCanal"/>

	<LinearLayout android:id="@+id/llCanal1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button android:text="@string/btn_salvar" android:id="@+id/btnSalvarCanal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
		<Button android:text="@string/btn_cancelar" android:id="@+id/btnCancelarCanal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
	</LinearLayout>

</LinearLayout>
