<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/cadastro_representadas" />
	<TextView android:text="Id:" android:id="@+id/txtIdRepresentada" android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/txt_razao_social" android:id="@+id/txtRazaoSocialRepresentada"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<EditText android:text="" android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:singleLine="true" android:id="@+id/etxtRazaoSocialRepresentada"
		android:capitalize="sentences"/>

	<LinearLayout android:id="@+id/llRepresentada1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button android:text="@string/btn_salvar" android:id="@+id/btnSalvarRepresentada"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
		<Button android:text="@string/btn_cancelar" android:id="@+id/btnCancelarRepresentada"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
	</LinearLayout>

</LinearLayout>
